--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
-/* @font-face kit by Fonts2u (http://www.fonts2u.com) */ 
+/* @font-face kit by Fonts2u (http://www.fonts2u.com) star wars font*/ 
 @font-face {font-family:"STARWARS";src:url("STARWARS.eot?") format("eot"),url("STARWARS.woff") format("woff"),url("STARWARS.ttf") format("truetype"),url("STARWARS.svg#STARWARS") format("svg");font-weight:normal;font-style:normal;}
 
 
+/*centering of the Title*/
 
 .col-12 {
     text-align: center !important;
